[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "runtime-tokio", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
axum = "0.6.20"
cloud-storage = "0.11.1"
